# quick_and_dirty

./: .eslintrc  .gitignore  README.md  collect_html_fragments.rb  cra.sh  package-lock.json  package.json  pnpm-lock.yaml
anki/: anki.js
anki-python/: .gitignore  .prettierrc  GEEK.txt  Pipfile  README.md  anki-deu.py  anki.py  anki.txt  geek2.txt  requirements.txt
anki-python/anki/: cloze.py  cloze_load.py  main.py  urls.py
bank/: .gitignore  LICENSE.md  Makefile  README.md  pyproject.toml  upload_me.csv
bank/src/bank/: main.py  payees.py
bank/tests/: test_main.py  test_setup.py
bank/tests/fixtures/: 20230408-6016829526-umsatz.CSV  20230408-6016829526-umsatz_2.CSV
boilerplate-node/: .eslintrc.json  .prettierrc  Dockerfile  README.md  package.json
boilerplate-node/src/: index.js
boilerplate-node/src/__tests__/: index.test.js
boilerplate-python/: Dockerfile  README.md
boilerplate-python/src/: main.py
boostnote-node/: .eslintrc  .gitignore  .prettierignore  README.md  index.js  note.mustache  package-lock.json  package.json  urls.yml  urls.yml.dist
boostnote-node/lib/: Instruction.js  codepen.js  commands.js  generic.js  github.js  lib.js  readCliParams.js  reddit.js  utils.js  youtube.js
boostnote-node/scripts/: clean-yaml.js
boostnote-node/src/: README.md  index.js
boostnote-node/src/__tests__/: InstructionsStore.test.js  JobsFactory.test.js  JobsStore.test.js  Logger.test.js  NotesStore.test.js
boostnote-node/src/lib/: InstructionsStore.js  JobsFactory.js  JobsStore.js  Logger.js  NotesStore.js  const.js  generic.js  github.js  lib.js  readCliParams.js  reddit.js  utils.js  youtube.js
boostnote-node/tests/: InstructionsStore.test.js
captain_mandolin/: .config.previous.js  .gitignore  README.md  TODO.md  captain_mandolin.js  downloader.js  ffmpeg-editor.js  ffmpeg-info.js  ffmpeg-joiner.config.sample.yml  ffmpeg-joiner.js  ffmpeg-splitter.config.sample.yml  ffmpeg-splitter.js  package-lock.json  package.json  pnpm-lock.yaml  slow_copying.py
captain_mandolin/config/: captain_mandolin.config.sample.yml  downloader.config.sample.yml  ffmpeg-editor.config.sample.yml
captain_mandolin/copy_files/: package.json  sort.js
captain_mandolin/lib/: ffmpeg.js  shared.js  types.js  video-processor.js
german-missing-words/: .gitignore  package.json
german-missing-words-app/: app.js  package-lock.json  package.json
german-missing-words-app/client/: README.md  package-lock.json  package.json
german-missing-words-app/fetch-articles/: fetch-test.py
german-missing-words-app/routes/: api.js  article.js
german-missing-words/fetch-articles/: fetch-test.py
german-missing-words/src/: index.js
german-scraping/: .gitignore  DEUSingular.tsv  README.md  adjectives.js  deepl.js  deepl_input-sample.txt  plurals.js  sample-wikimedia-response.json  wiktionary.js  wiktionary_input-sample.txt
german-scraping/lib/: CaseInsensitiveSet.js  anki.js
styled_markdown/: .gitignore  hulver.html  pyproject.toml  styled_markdown.code-workspace
styled_markdown/features/: main.feature
styled_markdown/features/fixtures/: single.html  single.md
styled_markdown/features/steps/: main.py
styled_markdown/styled_markdown/: styled_markdown.py
wayfair/: pyproject.toml
wayfair/tests/: test_wayfair.py
wayfair/wayfair/: main.py
wiktionary/: .gitignore  article2.js  first.js
youtube_migration/: .gitignore  csv-concat.py  delete_duplicates.py  pyproject.toml  uploader.py
(+35 files in other folders)
