[tool.poetry]
name = "styled_markdown"
version = "0.1.0"
description = "Generates styled HTML from markdown files"
authors = ["gotofritz"]
license = "0BSD"

[tool.poetry.dependencies]
python = "^3.8"
Markdown = "^3.3.6"
beautifulsoup4 = "^4.10.0"
typer = "^0.4.0"

[tool.poetry.dev-dependencies]
behave = "^1.2.6"
black = "^22.1.0"
mypy = "^0.931"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
