[tool.poetry]
name = "youtube_migration"
version = "0.1.0"
description = ""
authors = ["gotofritz <gotofritz@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"
google-auth = "^2.11.0"
google-auth-oauthlib = "^0.5.2"
google-auth-httplib2 = "^0.1.0"
google-api-python-client = "^2.58.0"
pandas = "^1.4.3"

[tool.poetry.dev-dependencies]
black = "^24.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
